Setting up Authentication with Nuget packages, create DbContext, Seed Roles, Seed Default User and Inject Dbcontext and Authentication Changes

--- a/CodePulse.API/appsettings.json
+++ b/CodePulse.API/appsettings.json
@@ -8,5 +8,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "CodePulseConnectionString": "Server=localhost;Database=CodePulseDb;TrustServerCertificate=true;Trusted_Connection=true"
+    },
+    "Jwt": {
+      "Key": "a7w44m2cqw4akwmcao1213dewo97sncewps23mcapc42waw",
+      "Issuer" : "https://localhost:7133",
+      "Audience" : "https://localhost:4200"
     }
 }
